deploy/k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: uniplace-ingress
    namespace: uniplace
    annotations:
        kubernetes.io/ingress.class: alb
        alb.ingress.kubernetes.io/scheme: internet-facing
        alb.ingress.kubernetes.io/target-type: ip
        alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
        alb.ingress.kubernetes.io/ssl-redirect: "443"
        alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:194722402714:certificate/2c4d1727-442c-4c94-9019-f166118f433d
        alb.ingress.kubernetes.io/success-codes: "200-499"
        alb.ingress.kubernetes.io/healthcheck-path: /
spec:
    ingressClassName: alb
    rules:
        - host: uniplace.site
          http:
              paths:
                  - path: /api
                    pathType: Prefix
                    backend:
                        service:
                            name: backend-service
                            port:
                                number: 80
                  - path: /ai
                    pathType: Prefix
                    backend:
                        service:
                            name: ai-service
                            port:
                                number: 80
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 80
